@@ -10,6 +10,7 @@ x.x.x
 6. Add Work, Performance, and Album to details in MAI track view.
 7. Add 'Lyrion' colour - different between Light and Dark themes.
 8. Change icon to match Lyrion.
+9. Fix custom scrollbar in iframes.
 
 4.6.3
 -----
